# soaricarus_api

./: .env.docker.sample  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  garage.toml
.github/workflows/: release.yml  workflow.yml
garage/: Dockerfile  entrypoint.sh  full-init-garage.sh  init-garage.sh
scripts/: init-garage.sh
src/: main.rs
src/auth/: mod.rs
src/callers/: coverart.rs  song.rs
src/callers/queue/: coverart.rs  song.rs
src/config/: init.rs
src/db/: mod.rs
src/repo/: coverart.rs  song.rs
